--- a/index.html
+++ b/index.html
@@ -2,13 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SpellBee Puzzle Demo · SpellBeePuzzle.com</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>SpellBee Puzzle Demo · Play Now</title>
+  <meta name="description" content="Try a live demo of SpellBee Puzzle—an engaging word puzzle experience. Play the demo here, then visit SpellBeePuzzle.com for the full game.">
+  <meta name="keywords" content="word puzzle, browser game, spellbee, demo game">
+  <meta name="author" content="SpellBee Puzzle Team">
+  <meta name="theme-color" content="#ffa500">
+
+  <!-- Open Graph for social media -->
+  <meta property="og:title" content="SpellBee Puzzle Demo">
+  <meta property="og:description" content="Play a demo of SpellBee Puzzle here before visiting SpellBeePuzzle.com for the full experience.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://YOUR_USERNAME.github.io/">
+  <meta property="og:image" content="https://YOUR_USERNAME.github.io/assets/og-image.png">
+  <meta property="og:site_name" content="SpellBee Puzzle">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="SpellBee Puzzle Demo">
+  <meta name="twitter:description" content="Play a demo of SpellBee Puzzle here!">
+  <meta name="twitter:image" content="https://YOUR_USERNAME.github.io/assets/og-image.png">
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "SpellBee Puzzle Demo",
+    "description": "Play a demo of SpellBee Puzzle before heading to SpellBeePuzzle.com for the full game.",
+    "url": "https://YOUR_USERNAME.github.io/"
+  }
+  </script>
+
+  <!-- Favicon & touch icons -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+  <!-- (Optional) Basic styling -->
+  <style>
+    body { font-family: sans-serif; line-height: 1.6; max-width: 600px; margin: 40px auto; padding: 0 20px; }
+    h1 { color: #333; }
+    a.cta { display: inline-block; margin: 20px 0; padding: 12px 20px; background: #ffa500; color: #fff; text-decoration: none; border-radius: 4px; }
+    a.cta:hover { background: #e59400; }
+  </style>
 </head>
 <body>
-  <h1>SpellBee Puzzle 🌟</h1>
-  <p>Welcome! Play a demo here or visit the <a href="https://spellbeepuzzle.com" target="_blank" rel="noopener">full game at SpellBeePuzzle.com</a>.</p>
-  <!-- Optional: embed iframe -->
-  <!-- <iframe src="https://spellbeepuzzle.com/embed" width="600" height="400"></iframe> -->
+  <h1>🎮 SpellBee Puzzle Demo</h1>
+  <p>Welcome! Try a quick demo of our engaging word puzzle game below, and visit the full version at:</p>
+  <a class="cta" href="https://spellbeepuzzle.com" target="_blank" rel="noopener">Play Full Game at SpellBeePuzzle.com</a>
+
+  <!-- You *can* embed a live demo here -->
+  <div id="demo-container">
+    <!-- Example: <iframe src="https://spellbeepuzzle.com/embed" width="100%" height="400"></iframe> -->
+  </div>
+
+  <footer style="margin-top:40px; font-size:0.9em; color:#777;">
+    <p>Hosted via GitHub Pages – a powerful, free static site.</p>
+  </footer>
 </body>
 </html>
